--- a/html/index.html
+++ b/html/index.html
@@ -145,6 +145,29 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <script>
+        // verstuur waarden na berekningen naar pomp
+        async function postPomp(pomp_data) {
+            try {
+                const response = await fetch("http://192.168.238.56/ph", {
+                    method: "POST",
+                    // mode: 'no-cors',  // Disables CORS checks
+                    headers: {
+                        "Content-Type": "application/json"
+                    },
+                    body: JSON.stringify(pomp_data)
+                });
+                if (!response.ok) {
+                    throw new Error(`HTTP error! Status: ${response.status}`);
+                }
+
+                // const result = await response.json(); // Assuming the API returns a JSON response
+
+            } catch (error) {
+                console.error("Fout bij versturen van pompData:", error);
+                alert("Er is een fout opgetreden bij het versturen van de pompData. Probeer het opnieuw.");
+            }
+        }
+
         // functie om gegevens te versturen naar de api om een overzicht van de history bij te houden
         async function postHistory(history_data) {
             try {
@@ -258,16 +281,23 @@
             // Toon de berekende waarde in een pop-up
             alert(`pH+: ${phPlus} ml, pH-: ${phMinus} ml, Chloor: ${chlorineRequiredMl} ml`);
 
-            //verstuur data naar api (waardes worden hier opgeslagen omdat ze anders niet beschikbaar zijn buiten de functie)
+            const pomp_data = {
+                PHplus: Number(0),
+                PHmin: Number(0),
+                Chloor: Number(0),
+            };
+
+            //maak data verstuurbaar api (waardes worden hier opgeslagen omdat ze anders niet beschikbaar zijn buiten de functie)
             const history_data = {
                 date: formattedDate,
                 ph_value: Number(ph),
                 chlorine_ppm: Number(chlorine),
-                ph_plus: Number(phMinus),
+                ph_plus: Number(phPlus),
                 ph_min: Number(phMinus),
                 chlorine: Number(chlorineRequiredMl),
             };
-            postHistory(history_data);
+            postPomp(pomp_data)
+            // postHistory(history_data);
         });
     </script>
 </body>
